# internship_files

./: README.md  streaming_handoff_filter.py
deepwiki_minimaxm3_cloud/: example_commands.md  main.py  pyproject.toml  requirements.txt
deepwiki_repo_analyzer/: main.py  pyproject.toml  requirements.txt
deepwiki_repo_analyzer/examples/: example_commands.md
document_intelligence_examle/: README.md  app.py  document_reader.py  example_commands.md  exporters.py  json_utils.py  main.py  minimax_client.py  pipeline.py  pyproject.toml  requirements.txt  schemas.py
document_intelligence_examle/sample_docs/: sample_contract.txt  sample_invoice.txt
financial_agent/: README.md  agent_flow.py  app.py  dashboard.py  env  reports_memory.jsonl  requirements.txt  resolver.py  schemas.py  scoring.py  tools.py  trace_logger.py  writer.py
financial_agent/financial_agent/: app.py  dashboard.py  llm_client.py  research_planner.py  scoring.py  writer.py
financial_agent/financial_agent/logs/: trace_events.jsonl
financial_agent/logs/: reports_memory.jsonl  trace_events.jsonl
handoff_message_filter/: basic_handoff_filter.py
mcp_filesystem/: main.py  readme.md
mcp_filesystem/sample_files/: books.txt  notes.txt  tasks.txt
mcp_prompt_agent/: main.py  pyproject.toml  server.py
mcp_prompt_agent/examples/: unsafe_example.py
rag_evaluation_example/: app.py  evaluation.py  ollama_client.py  rag_engine.py  run_eval.py
rag_evaluation_example/data/: eval_questions.json
rag_evaluation_example/sample_docs/: legal_contract.txt
