[project]
name = "deepwiki-minimaxm3-cloud-analyzer"
version = "0.2.0"
description = "A DeepWiki MCP repository analyzer that uses MiniMax M3 through Ollama Cloud, without OpenAI APIs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.9.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
]

[tool.ruff]
line-length = 100
